# ccycles

./: CMakeLists.txt  README.md  environment.yml
.github/workflows/: CI.yml
cmake/: FindSDL2_gfx.cmake
docs/source/: conf.py  index.rst  writing-a-bot.rst
include/: api.hpp  c_api.h  c_utils.h  defines.h
src/: CMakeLists.txt  api.cpp  c_api.c  utils.cpp
src/client/: client_c_simple.c  client_randomio.cpp
src/cserver/: CMakeLists.txt  game_logic.h  player_map.h  renderer.h  server.h  server_utils.c
src/server/: CMakeLists.txt  configuration.cpp  configuration.hpp  game_logic.c  game_logic.cpp  game_logic.h  game_logic.hpp  player.c  player.h  player.hpp  player_map.c  player_map.h  renderer.c  renderer.cpp  renderer.hpp  resource_loader.cpp  resource_loader.hpp  server.c  server.cpp  server.h  server.hpp  server_backend.cpp  server_main.c  server_main.cpp  server_utils.h  types.h
tests/: CMakeLists.txt  test_c_api.cpp  test_c_game_logic.cpp  test_game_logic.cpp  test_player.cpp  test_player_map.cpp
